# kafka-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
kafka-client/: Cargo.toml
kafka-client/src/: main.rs
kafka-protocol/: Cargo.toml  README.md
kafka-protocol/src/: codec.rs  lib.rs  main.rs  model.rs  types.rs
kafka-protocol/src/codec/: crc32.rs  de.rs  error.rs  mod.rs  ser.rs
kafka-protocol/src/codec/compression/: gzip.rs  lz4.rs  mod.rs  snappy.rs  zstd.rs
kafka-protocol/tests/: model_test.rs
kafka-rs/: Cargo.toml
kafka-rs/src/: acc.rs  config.rs  main.rs  metadata.rs  req.rs
spec-parser/: Cargo.toml  README.md
spec-parser/src/: bnf.pest  common.rs  main.rs  parser.rs  protocol.pest  templates.rs
src/: main.rs  protocol.pest  protocol.rs  serde.rs  templates.rs  types.rs
