[package]
name = "kafka-protocol"
version = "0.1.0"
authors = ["Leroux Romain <leroux.rgd@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"

flate2 = { version = "1.0", optional = true }

[features]
default = ["gzip"]
gzip = ["flate2"]

[dev-dependencies]
matches = "0.1"
