[package]
name = "kafka-protocol"
version = "0.1.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
arrayvec = "0.5"
lazy_static = "1.4"
num_enum = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_repr = "0.1"
strum = "0.16"
strum_macros = "0.16"

flate2 = { version = "1.0", optional = true }
snap = { version = "0.2", optional = true }
lz4 = { version = "1.23", optional = true }
zstd = { version = "0.5", optional = true }

[features]
default = ["gzip", "snappy", "lz4", "zstd"]
gzip = ["flate2"]
snappy = ["snap"]

[dev-dependencies]
matches = "0.1"
