[package]
name = "kafka-rs"
version = "0.1.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
arc-swap = "0.4"
async-std = "1.2"
chrono = "0.4"
futures = "0.3"
kafka-protocol = { path = "../kafka-protocol", version = "0.1.0" }
lazy_static = "1.4"
serde = "1.0"
strum = "0.16"