[package]
name = "spec-parser"
version = "0.1.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
docopt = "1"
failure = "0.1"
heck = "0.3"
indexmap = "1.0"
lazy_static = "1.2"
pest = "2.0"
pest_derive = "2.0"
regex = "1"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
tera = "0.11"
