[package]
name = "spec-parser"
version = "0.1.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
docopt = "1"
heck = "0.3"
indexmap = "1.0"
lazy_static = "1.2"
pest = "2.1"
pest_derive = "2.1"
regex = "1"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
tera = "1.0"
thiserror = "1.0"
